--- a/css/styles.css
+++ b/css/styles.css
@@ -224,7 +224,7 @@
     line-height: 1.17;
     font-weight: 500px;
     letter-spacing: 0.03;
-    text-align: center;
+    text-align: left;
     margin-top: 30px;
 }
 
