--- a/css/styles.css
+++ b/css/styles.css
@@ -1,58 +1,48 @@
-
-*,
-*::before,
-*::after {
-  box-sizing: border-box;
-}
-
 .body {
     font-family: 'Roboto','Raleway', sans-serif;
     background: #FFFFFF;
-    width: 1600px;
+    max-width: 1600px;
 }
 
 .container{
-    width: 1200px;
+    width: 1200px
+}
+
+.section{
+    padding: 94px 0;
 }
 
 .header{
-    height: 80px;
     display: flex;
+    margin: 0 auto;
 }
 
 .main-tittle {
-    line-height: 1.17;
+    line-height: 1.38;
     text-decoration: none;
     color: #2196F3;
     letter-spacing: 0.03;
-    width: 145px;
-    height: 31px;
-    margin-top: 24px;
-    margin-bottom: 25px;
-    margin-left: 215px;
-    margin-right: 93px;
     font-size: 26px;
+    padding-top: 24px;
+    padding-left: 15px;
+    padding-bottom: 25px;
+    padding-right: 93px;
 }
 
 .rest-tittle {
+    line-height: 1.38;
     color: #212121;
 }
-
 .menu{
-    display: inline-flex;
-    flex-direction: row;
-    list-style-type: none;
-    margin-top: 32px;
-    margin-bottom: 32px;
     font-size: 14px;
 }
 
-.contact-menu{
+.menu-list{
     display: inline-flex;
-    flex-direction: row;
     list-style-type: none;
+    flex-direction: row;
     margin-top: 32px;
-    margin-bottom: 32px;
+    font-size: 14px;
 }
 
 .studio {
@@ -60,7 +50,6 @@
     line-height: 1.17;
     text-decoration: none;
     letter-spacing: 0.03;
-    width: 53px;
     margin-right: 46px;
 }
 
@@ -69,7 +58,6 @@
     text-decoration: none;
     line-height: 1.17;
     letter-spacing: 0.02;
-    width: 58px;
     margin-right: 46px;
 }
 
@@ -78,16 +66,21 @@
     text-decoration: none;
     line-height: 1.17;
     letter-spacing: 0.02;
-    width: 51px;
-    margin-right: 371px;
+    margin-right: 320px;
 }
 
+.contact-list{
+    display: inline-flex;
+    list-style-type: none;
+    flex-direction: row;
+    margin-top: 32px;
+    font-size: 14px;
+}
 .email {
     color: #212121;
     line-height: 1.17;
     text-decoration: none;
     letter-spacing: 0.02;
-    width: 110px;
     margin-right: 50px;
 }
  
@@ -96,8 +89,7 @@
     text-decoration: none;
     line-height: 1.17;
     letter-spacing: 0.02;
-    width: 135px;
-    margin-right: 227px;
+    padding-right: 0px;
 }
 
 .portfolio:hover,
@@ -113,49 +105,39 @@
 
 .request {
     background-color:#2F303A;
-    color: white;
+    width: 1600px;
+    height: 600px;
+    margin: 0 auto;
+}
+
+h1{
+    color: #FFFFFF;
     line-height: 1.36;
     letter-spacing: 0.06;
-    height: 600px;
-}
-
-.request-txt{
-    line-height: 1.36;
-    width: 696px;
-    height: 120px;
-    margin-left: 452px;
-    padding-top: 200px;
-    margin-right: 452px;
     font-size: 44px;
+    padding: 200px 452px 0 452px;
+    margin-bottom: 40px;
     text-align: center;
-       
 }
-
 .button { 
     background-color: #2196F3;
     line-height: 1.87;
     color: white;
     letter-spacing: 0.06;
+    padding: 10px 41px;
+    margin: 40px 700px 200px;
+    justify-content: center;
+    white-space: nowrap;
+    border: none;
     cursor: pointer;
-    font-size: 16px;
-    padding-top: 10px;
-    padding-right: 42px;
-    padding-left: 42px;
-    padding-bottom: 10px;
-    margin: 100px 700px 200px 700px;
 }
 
-.section{
-    display: flex;
-    width: 1200px;
-    padding-top: 94px;
-    padding-bottom: 94px;
-    margin-left: 215px;
-}
 .about-us{
-    flex-direction: row;
     display: flex;
+    flex-direction: row;
     justify-content: space-between;
+    margin: 0 auto;
+    padding: 94px 0;
 }
 
 .about-tittle {
@@ -171,62 +153,70 @@
     line-height: 1.71;
     font-weight: 400px;
     letter-spacing: 0.03;
-    width: 270px;
     font-size: 14px;
+    width: 270px;
 }
 
+ul{
+    padding-left: 0px;
+}
+
+figure{
+    margin: 0px;
+}
+
+.job-section{
+    margin: 0 auto;
+}
 .job-tittle {
     color:#212121;
     line-height: 1.16;  
     letter-spacing: 0.03;
-    margin-top: 94px;
-    margin-left: 624px;
     font-size: 36px;
+    font-weight: 700px;
+    text-align: center;
 }
 
-.job-photo{
-    display: flex;  
-    flex-direction: row;
+.photo-list{
     list-style-type: none;
-    margin-top: 50px;
-    margin-left: 180px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    gap: 30px;
 }
 
-.job-img{
-    margin-right: 30px;
-}
 .team-section {
     background-color: #F5F4FA;
-    height: 648px;
+    margin: 0 auto;
 }
 
-.team {
+.team-tittle {
     color:#212121;
     line-height: 1.16;
     letter-spacing: 0.03;
-    white-space: nowrap;
+    text-align: center;
     font-size: 36px;
-    margin-top: 188px;
-    margin-left: 695px;
+    font-weight: 700px;
 }
 
-.team-photo{
-    display: flex;  
-    flex-direction: row;
+.img-list{
     list-style-type: none;
-    width: 1200px;
-    margin-top: 50px;
-    margin-right: 215px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    gap: 30px;
 }
 
-.our.photo{
-    font-size: 16px;
+.our-img{
+    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+    border-radius: 0px 0px 4px 4px;
 }
 
 .name {
     color:#212121;
     line-height: 1.17;
     font-weight: 500px;
+    font-size:16px;
     letter-spacing: 0.03;
     text-align: center;
     margin-top: 30px;
@@ -236,14 +226,22 @@
     color: #757575;
     line-height: 1.17;
     font-weight: 400px;
+    font-size: 14px;
     letter-spacing: 0.03;
     display: block;
-    margin-top: 10px;
+    padding-top: 10px;
+    padding-bottom: 30px;
 }
 
 .footer {
     background-color: #2F303A;
-    display: flex;
+}
+
+.footer-section{
+    padding-top: 60px;
+    padding-left:215px;
+    padding-right: 215px;
+    padding-bottom: 60px;
 }
 
 .second-main-tittle {
@@ -252,7 +250,8 @@
     line-height: 1.38;
     letter-spacing: 0.03;
     font-size: 26px;
-    margin-left: 215px;
+    padding-top: 60px;
+    margin-bottom: 20px;
 }
 
 .second-rest-tittle {
@@ -264,8 +263,9 @@
     line-height: 1.71;
     font-weight: 400px;
     letter-spacing: 0.03;
-    margin-top: 20px;
-    margin-left: 215px;
+    display: flex;
+    flex-direction: column;
+    padding-bottom: 9px;
 }
 
 .second-email {
@@ -275,8 +275,8 @@
     font-weight: 400px;
     text-decoration: none;
     letter-spacing: 0.03;
-    display: block;
-    margin-top: 9px;
+    padding-bottom: 9px;
+    padding-top: 9px;
 }
 
 .second-phone {
@@ -286,33 +286,35 @@
     font-weight: 400px;
     text-decoration: none;
     letter-spacing: 0.03;
-    display: block;
-    margin-top: 9px;
+}
+
+.second-menu{
+    background-color: #FFFFFF;
+    margin: 0 auto;
+    display: flex;
+    justify-content: center;
 }
 
 .button-list{
-    display:flex;
+    display: flex;
+    flex-direction: row;
     list-style-type: none;
-    justify-content: space-between;
-    margin-top: 100px;
-    margin-left: 532px;
+    padding: 6px 22px;
+    text-align: center;
+    gap: 8px;
+    margin-top: 94px;
 }
 
 .menu-button {
     color: #212121;
-    background-color: #F5F4FA;
+    background-color: white;
     text-decoration: none;
     letter-spacing: 0.03;
+    font-size: 16px;
     cursor: pointer;
     border: none;
     font-weight: 500;
     line-height: 1.62;
-    font-size: 16px;
-    font-weight: 500;
-    display: flex;  
-    flex-direction: row;
-    padding: 6px 22px;
-    margin-right: 52px;
 }
 
 .menu-button:hover {
@@ -322,15 +324,18 @@
     box-shadow: 2px 2px 5px #7e7676;
     }
 
-.photo-list{
+.portfolio-photo{
+    margin: 0 auto;
+    display: flex;
+    gap: 30px;
+}
+
+.portfolio-list{
     list-style-type: none;
     text-decoration: none;
     display: flex;
     flex-wrap: wrap;
-    width: 1600px;
-    margin-top: 56px;
-    margin-left: 215px;
-    margin-right: 215px;
+    justify-content: center;
 }
 
 .second-name {
@@ -338,7 +343,7 @@
     font-weight: 700;
     color:#212121;
     letter-spacing: 0.06;
-    text-align:left;
+    padding: 20px 24px 4px 24px;
 }
 .categories {
     line-height: 1.87;
